Сделал card.html

--- a/card.html
+++ b/card.html
@@ -132,200 +132,171 @@
 					<div class="cont">
 						<div class="breadcrumbs">
 							<a href="index.html">Главная</a> <span class="sep">·</span>
-							<span class="current">Артисты</span>
+							<a href="artists.html">Артисты</a> <span class="sep">·</span>
+							<span class="current">Карточка артиста</span>
 						</div>		
 					</div>
 				</div>
 
 
-				<section class="artist">
+				<section class="card block">
 					<div class="cont">
 						<div class="releases_top">
-							<div class="releases_title title">Артисты</div>	
-						</div>				
+							<div class="card_title title">Карточка артиста</div>	
+						</div>		
 
-						<div class="artist_items">
-							<a href="#" class="artist_item">
-								<div class="artist_item-img">
-									<img data-src="images/artists1.jpg" alt="" class="lozad">
+						<div class="card_item">
+							<div class="card_item-photo">
+								<img data-src="images/artists1.jpg" alt="" class="lozad">
+							</div>
+							<div class="card_item-info">
+								<div class="card_item-top">
+									<div class="card_item-name">Валерия Иванова</div>
+									<div class="card_item-post">Фолк-рок</div>
+									<div class="card_item-text">Информация об артисте</div>
 								</div>
-								<div class="artist_item-title">Валерия<br>	Иванова</div>
-								<div class="artist_item-text">Фолк-рок</div>
-							</a>
-							<a href="#" class="artist_item">
-								<div class="artist_item-img">
-									<img data-src="images/artists2.jpg" alt="" class="lozad">
+								<div class="card_item-links">
+									<a href="#">
+										<img src="images/card-icon1.svg" alt="">
+									</a>
+									<a href="#">
+										<img src="images/card-icon2.svg" alt="">
+									</a>
+									<a href="#">
+										<img src="images/card-icon3.svg" alt="">
+									</a>
+									<a href="#">
+										<img src="images/card-icon4.svg" alt="">
+									</a>
 								</div>
-								<div class="artist_item-title">Иван<br> Петров</div>
-								<div class="artist_item-text">Классика</div>
-							</a>
-							<a href="#" class="artist_item">
-								<div class="artist_item-img">
-									<img data-src="images/artists3.jpg" alt="" class="lozad"> 
-								</div>
-								<div class="artist_item-title">Александра<br> смирнова</div>
-								<div class="artists_item-text">Хип-Хоп</div>
-							</a>
-							<a href="#" class="artist_item">
-								<div class="artist_item-img">
-									<img data-src="images/artists4.jpg" alt="" class="lozad">
-								</div>
-								<div class="artist_item-title">Агата<br>фролова</div>
-								<div class="artist_item-text">Авторская музыка</div>
-							</a>
-							<a href="#" class="artist_item">
-								<div class="artist_item-img">
-									<img data-src="images/artists5.jpg" alt="" class="lozad">
-								</div>
-								<div class="artist_item-title">Кристина<br> Мельникова</div>
-								<div class="artist_item-text">Поп</div>
-							</a>
-							<a href="#" class="artist_item">
-								<div class="artist_item-img">
-									<img data-src="images/artists6.jpg" alt="" class="lozad">
-								</div>
-								<div class="artist_item-title">Антон<br> Фадеев</div>
-								<div class="artist_item-text">Хип-Хоп</div>
-							</a>	
-							<a href="#" class="artist_item">
-								<div class="artist_item-img">
-									<img data-src="images/artists1.jpg" alt="" class="lozad">
-								</div>
-								<div class="artist_item-title">Валерия<br>	Иванова</div>
-								<div class="artist_item-text">Фолк-рок</div>
-							</a>
-							<a href="#" class="artist_item">
-								<div class="artist_item-img">
-									<img data-src="images/artists2.jpg" alt="" class="lozad">
-								</div>
-								<div class="artist_item-title">Иван<br> Петров</div>
-								<div class="artist_item-text">Классика</div>
-							</a>
-							<a href="#" class="artist_item">
-								<div class="artist_item-img">
-									<img data-src="images/artists3.jpg" alt="" class="lozad"> 
-								</div>
-								<div class="artist_item-title">Александра<br> смирнова</div>
-								<div class="artists_item-text">Хип-Хоп</div>
-							</a>
-							<a href="#" class="artist_item">
-								<div class="artist_item-img">
-									<img data-src="images/artists4.jpg" alt="" class="lozad">
-								</div>
-								<div class="artist_item-title">Агата<br>фролова</div>
-								<div class="artist_item-text">Авторская музыка</div>
-							</a>
-							<a href="#" class="artist_item">
-								<div class="artist_item-img">
-									<img data-src="images/artists5.jpg" alt="" class="lozad">
-								</div>
-								<div class="artist_item-title">Кристина<br> Мельникова</div>
-								<div class="artist_item-text">Поп</div>
-							</a>
-							<a href="#" class="artist_item">
-								<div class="artist_item-img">
-									<img data-src="images/artists6.jpg" alt="" class="lozad">
-								</div>
-								<div class="artist_item-title">Антон<br> Фадеев</div>
-								<div class="artist_item-text">Хип-Хоп</div>
-							</a>	
-							<a href="#" class="artist_item">
-								<div class="artist_item-img">
-									<img data-src="images/artists1.jpg" alt="" class="lozad">
-								</div>
-								<div class="artist_item-title">Валерия<br>	Иванова</div>
-								<div class="artist_item-text">Фолк-рок</div>
-							</a>
-							<a href="#" class="artist_item">
-								<div class="artist_item-img">
-									<img data-src="images/artists2.jpg" alt="" class="lozad">
-								</div>
-								<div class="artist_item-title">Иван<br> Петров</div>
-								<div class="artist_item-text">Классика</div>
-							</a>
-							<a href="#" class="artist_item">
-								<div class="artist_item-img">
-									<img data-src="images/artists3.jpg" alt="" class="lozad"> 
-								</div>
-								<div class="artist_item-title">Александра<br> смирнова</div>
-								<div class="artists_item-text">Хип-Хоп</div>
-							</a>
-							<a href="#" class="artist_item">
-								<div class="artist_item-img">
-									<img data-src="images/artists4.jpg" alt="" class="lozad">
-								</div>
-								<div class="artist_item-title">Агата<br>фролова</div>
-								<div class="artist_item-text">Авторская музыка</div>
-							</a>
-							<a href="#" class="artist_item">
-								<div class="artist_item-img">
-									<img data-src="images/artists5.jpg" alt="" class="lozad">
-								</div>
-								<div class="artist_item-title">Кристина<br> Мельникова</div>
-								<div class="artist_item-text">Поп</div>
-							</a>
-							<a href="#" class="artist_item">
-								<div class="artist_item-img">
-									<img data-src="images/artists6.jpg" alt="" class="lozad">
-								</div>
-								<div class="artist_item-title">Антон<br> Фадеев</div>
-								<div class="artist_item-text">Хип-Хоп</div>
-							</a>	
-							<a href="#" class="artist_item">
-								<div class="artist_item-img">
-									<img data-src="images/artists1.jpg" alt="" class="lozad">
-								</div>
-								<div class="artist_item-title">Валерия<br>	Иванова</div>
-								<div class="artist_item-text">Фолк-рок</div>
-							</a>
-							<a href="#" class="artist_item">
-								<div class="artist_item-img">
-									<img data-src="images/artists2.jpg" alt="" class="lozad">
-								</div>
-								<div class="artist_item-title">Иван<br> Петров</div>
-								<div class="artist_item-text">Классика</div>
-							</a>
-							<a href="#" class="artist_item">
-								<div class="artist_item-img">
-									<img data-src="images/artists3.jpg" alt="" class="lozad"> 
-								</div>
-								<div class="artist_item-title">Александра<br> смирнова</div>
-								<div class="artists_item-text">Хип-Хоп</div>
-							</a>
-							<a href="#" class="artist_item">
-								<div class="artist_item-img">
-									<img data-src="images/artists4.jpg" alt="" class="lozad">
-								</div>
-								<div class="artist_item-title">Агата<br>фролова</div>
-								<div class="artist_item-text">Авторская музыка</div>
-							</a>
-							<a href="#" class="artist_item">
-								<div class="artist_item-img">
-									<img data-src="images/artists5.jpg" alt="" class="lozad">
-								</div>
-								<div class="artist_item-title">Кристина<br> Мельникова</div>
-								<div class="artist_item-text">Поп</div>
-							</a>
-							<a href="#" class="artist_item">
-								<div class="artist_item-img">
-									<img data-src="images/artists6.jpg" alt="" class="lozad">
-								</div>
-								<div class="artist_item-title">Антон<br> Фадеев</div>
-								<div class="artist_item-text">Хип-Хоп</div>
-							</a>													
+							</div>
 						</div>
-						<div class="pagination">
-							<a href="#" class="prev"><img src="images/arrow-prev.svg" alt=""></a>
-							<a href="#">1</a>
-							<a href="#">2</a>
-							<a href="#">3</a>
-							<a class="active">4</a>
-							<a href="#">5</a>
-							<span>...</span>	
-							<a href="#">10</a>						
-							<a href="#" class="next"><img src="images/arrow-next.svg" alt=""></a>
-						</div>
+					</div>
+				</section>
 
+
+				<section class="album">
+					<div class="cont">
+						<div class="releases_bottom">							
+							<div class="releases_left">
+								<div class="releases_subtitle">Альбомы</div>
+							</div>
+							<div class="slider-arrows4"></div>
+						</div>	
+						<div class="album_items">
+							<div class="album_item">
+								<div class="album_item-img">
+									<img src="images/album.jpg" alt="">
+								</div>
+								<div class="album_item-name">Название альбома</div>
+								<ol>
+									<li>Трек</li>
+									<li>Трек</li>
+									<li>Трек</li>
+									<li>Трек</li>
+									<li>Трек</li>
+									<li>Трек</li>
+									<li>Трек</li>
+									<li>Трек</li>
+									<li>Трек</li>
+									<li>Трек</li>
+									<li>Трек</li>
+									<li>Трек</li>
+									<li>Трек</li>
+									<li>Трек</li>
+								</ol>
+							</div>
+							<div class="album_item">
+								<div class="album_item-img">
+									<img src="images/album.jpg" alt="">
+								</div>
+								<div class="album_item-name">Название альбома</div>
+								<ol>
+									<li>Трек</li>
+									<li>Трек</li>
+									<li>Трек</li>
+									<li>Трек</li>
+									<li>Трек</li>
+									<li>Трек</li>									
+								</ol>
+							</div>
+							<div class="album_item">
+								<div class="album_item-img">
+									<img src="images/album.jpg" alt="">
+								</div>
+								<div class="album_item-name">Название альбома</div>
+								<ol>
+									<li>Трек</li>
+									<li>Трек</li>
+									<li>Трек</li>
+									<li>Трек</li>
+									<li>Трек</li>
+									<li>Трек</li>
+									<li>Трек</li>
+									<li>Трек</li>
+									<li>Трек</li>
+									<li>Трек</li>
+									<li>Трек</li>
+									<li>Трек</li>
+								</ol>
+							</div>
+							<div class="album_item">
+								<div class="album_item-img">
+									<img src="images/album.jpg" alt="">
+								</div>
+								<div class="album_item-name">Название альбома</div>
+								<ol>
+									<li>Трек</li>
+									<li>Трек</li>
+									<li>Трек</li>
+									<li>Трек</li>
+									<li>Трек</li>
+									<li>Трек</li>
+									<li>Трек</li>
+									<li>Трек</li>
+									<li>Трек</li>
+									<li>Трек</li>
+									<li>Трек</li>
+									<li>Трек</li>
+									<li>Трек</li>
+									<li>Трек</li>
+								</ol>
+							</div>
+							<div class="album_item">
+								<div class="album_item-img">
+									<img src="images/album.jpg" alt="">
+								</div>
+								<div class="album_item-name">Название альбома</div>
+								<ol>
+									<li>Трек</li>
+									<li>Трек</li>
+									<li>Трек</li>
+									<li>Трек</li>
+									<li>Трек</li>
+									<li>Трек</li>									
+								</ol>
+							</div>
+							<div class="album_item">
+								<div class="album_item-img">
+									<img src="images/album.jpg" alt="">
+								</div>
+								<div class="album_item-name">Название альбома</div>
+								<ol>
+									<li>Трек</li>
+									<li>Трек</li>
+									<li>Трек</li>
+									<li>Трек</li>
+									<li>Трек</li>
+									<li>Трек</li>
+									<li>Трек</li>
+									<li>Трек</li>
+									<li>Трек</li>
+									<li>Трек</li>
+									<li>Трек</li>
+									<li>Трек</li>
+								</ol>
+							</div>
+						</div>
 					</div>
 				</section>
 
