Сделал service.html

--- a/service.html
+++ b/service.html
@@ -146,7 +146,7 @@
 						<div class="service_items">
 							<div class="service_item">
 								<div class="service_item-info">
-									<div class="service_item-title">Маркетинг и SMM</div>
+									<div class="service_item-title">Маркетинг<br> и SMM</div>
 									<div class="service_item-text">Мы выстраиваем ваш личный бренд, образ в головах слушателей, делаем все активности, которые к этому приводят: ведение групп в социальных сетях, продвижение треков и клипов и в дальнейшем - концертов.</div>
 								</div>
 								<a href="#" class="service_item-btn">
@@ -156,7 +156,7 @@
 							<div class="service_item">
 								<div class="service_item-info">
 									<div class="service_item-title">PR</div>
-									<div class="service_item-text">Всё, что связано с работой со СМИ: поставить клип на музыкальные каналы, договориться об интервью в журнале, поставить трек на радио, договориться о выступлении артиста на мероприятии.</div>
+									<div class="service_item-text">Всё, что связано с<br> работой со СМИ:<br> поставить клип<br> на музыкальные каналы,<br> договориться об<br> интервью<br> в журнале, поставить трек<br> на радио, договориться о<br> выступлении артиста<br> на мероприятии.</div>
 								</div>
 								<a href="#" class="service_item-btn">
 									<span>Заказать</span>
@@ -165,7 +165,7 @@
 							<div class="service_item">
 								<div class="service_item-info">
 									<div class="service_item-title">Дистрибуция</div>
-									<div class="service_item-text">Размещение треков на цифровых витринах (Apple Music, iTunes, VK Музыка, Яндекс Музыка). Производство контента на физических носителях (сейчас это больше мерч).</div>
+									<div class="service_item-text">Размещение треков<br> на цифровых витринах<br> (Apple Music, iTunes, VK<br> Музыка, Яндекс Музыка).<br> Производство контента<br> на физических носителях<br> (сейчас это больше мерч).</div>
 								</div>
 								<a href="#" class="service_item-btn">
 									<span>Заказать</span>
@@ -173,8 +173,8 @@
 							</div>
 							<div class="service_item">
 								<div class="service_item-info">
-									<div class="service_item-title">Решение юридических и бухгалтерских вопросов</div>
-									<div class="service_item-text">Всё, что связано с работой со СМИ: поставить клип на музыкальные каналы, договориться об интервью в журнале, поставить трек на радио, договориться о выступлении артиста на мероприятии.</div>
+									<div class="service_item-title">Решение<br> юридических и<br> бухгалтерских<br> вопросов</div>
+									<div class="service_item-text">Всё, что связано с<br> работой со СМИ:<br> поставить клип<br> на музыкальные каналы,<br> договориться об<br> интервью<br> в журнале, поставить трек<br> на радио, договориться о<br> выступлении артиста<br> на мероприятии.</div>
 								</div>
 								<a href="#" class="service_item-btn">
 									<span>Заказать</span>
@@ -182,8 +182,8 @@
 							</div>
 							<div class="service_item">
 								<div class="service_item-info">
-									<div class="service_item-title">Сбор вознаграждений за публичное исполнение</div>
-									<div class="service_item-text">Агрегаторы не занимаются сбором вознаграждений за публичное исполнение. Лейблы же имеют контракты с РАО, ВОиС, РСП.</div>
+									<div class="service_item-title">Сбор<br> вознаграждений<br> за публичное<br> исполнение</div>
+									<div class="service_item-text">Агрегаторы не занимаются<br> сбором вознаграждений<br> за публичное исполнение.<br> Лейблы же имеют<br> контракты с РАО, ВОиС,<br> РСП.</div>
 								</div>
 								<a href="#" class="service_item-btn">
 									<span>Заказать</span>
@@ -192,7 +192,7 @@
 							<div class="service_item">
 								<div class="service_item-info">
 									<div class="service_item-title">Синхронизация</div>
-									<div class="service_item-text">Лейбл предоставит ваши песни в рамках своего каталога на телешоу, в кинокомпании, караоке-системы. Лицензирование музыки в кино, сериалы и другие творческие интеграции. Музыка для пассажирского транспорта.</div>
+									<div class="service_item-text">Лейбл предоставит ваши<br> песни в рамках своего<br> каталога на телешоу, в<br> кинокомпании, караоке<br>-системы. Лицензирование<br> музыки в кино, сериалы и<br> другие творческие<br> интеграции. Музыка для<br> пассажирского транспорта.</div>
 								</div>
 								<a href="#" class="service_item-btn">
 									<span>Заказать</span>
@@ -200,8 +200,8 @@
 							</div>
 							<div class="service_item">
 								<div class="service_item-info">
-									<div class="service_item-title">Промо на витринах</div>
-									<div class="service_item-text">Лейбл отправляет запросы на промо в большинство магазинов напрямую, не отсекая треки, или контролируя процесс, чтобы все артисты были довольны.</div>
+									<div class="service_item-title">Промо<br> на витринах</div>
+									<div class="service_item-text">Лейбл отправляет запросы<br> на промо в большинство<br> магазинов напрямую, не<br> отсекая треки, или<br> контролируя процесс,<br> чтобы все артисты были<br> довольны.</div>
 								</div>
 								<a href="#" class="service_item-btn">
 									<span>Заказать</span>
