--- a/post.html
+++ b/post.html
@@ -132,202 +132,82 @@
 					<div class="cont">
 						<div class="breadcrumbs">
 							<a href="index.html">Главная</a> <span class="sep">·</span>
-							<span class="current">Артисты</span>
+							<a href="index.html">Новости</a> <span class="sep">·</span>
+							<span class="current">Заголовок новости</span>
 						</div>		
 					</div>
 				</div>
 
 
-				<section class="artist">
+				<section class="post block">
 					<div class="cont">
 						<div class="releases_top">
-							<div class="releases_title title">Артисты</div>	
-						</div>				
-
-						<div class="artist_items">
-							<a href="#" class="artist_item">
-								<div class="artist_item-img">
-									<img data-src="images/artists1.jpg" alt="" class="lozad">
-								</div>
-								<div class="artist_item-title">Валерия<br>	Иванова</div>
-								<div class="artist_item-text">Фолк-рок</div>
-							</a>
-							<a href="#" class="artist_item">
-								<div class="artist_item-img">
-									<img data-src="images/artists2.jpg" alt="" class="lozad">
-								</div>
-								<div class="artist_item-title">Иван<br> Петров</div>
-								<div class="artist_item-text">Классика</div>
-							</a>
-							<a href="#" class="artist_item">
-								<div class="artist_item-img">
-									<img data-src="images/artists3.jpg" alt="" class="lozad"> 
-								</div>
-								<div class="artist_item-title">Александра<br> смирнова</div>
-								<div class="artists_item-text">Хип-Хоп</div>
-							</a>
-							<a href="#" class="artist_item">
-								<div class="artist_item-img">
-									<img data-src="images/artists4.jpg" alt="" class="lozad">
-								</div>
-								<div class="artist_item-title">Агата<br>фролова</div>
-								<div class="artist_item-text">Авторская музыка</div>
-							</a>
-							<a href="#" class="artist_item">
-								<div class="artist_item-img">
-									<img data-src="images/artists5.jpg" alt="" class="lozad">
-								</div>
-								<div class="artist_item-title">Кристина<br> Мельникова</div>
-								<div class="artist_item-text">Поп</div>
-							</a>
-							<a href="#" class="artist_item">
-								<div class="artist_item-img">
-									<img data-src="images/artists6.jpg" alt="" class="lozad">
-								</div>
-								<div class="artist_item-title">Антон<br> Фадеев</div>
-								<div class="artist_item-text">Хип-Хоп</div>
-							</a>	
-							<a href="#" class="artist_item">
-								<div class="artist_item-img">
-									<img data-src="images/artists1.jpg" alt="" class="lozad">
-								</div>
-								<div class="artist_item-title">Валерия<br>	Иванова</div>
-								<div class="artist_item-text">Фолк-рок</div>
-							</a>
-							<a href="#" class="artist_item">
-								<div class="artist_item-img">
-									<img data-src="images/artists2.jpg" alt="" class="lozad">
-								</div>
-								<div class="artist_item-title">Иван<br> Петров</div>
-								<div class="artist_item-text">Классика</div>
-							</a>
-							<a href="#" class="artist_item">
-								<div class="artist_item-img">
-									<img data-src="images/artists3.jpg" alt="" class="lozad"> 
-								</div>
-								<div class="artist_item-title">Александра<br> смирнова</div>
-								<div class="artists_item-text">Хип-Хоп</div>
-							</a>
-							<a href="#" class="artist_item">
-								<div class="artist_item-img">
-									<img data-src="images/artists4.jpg" alt="" class="lozad">
-								</div>
-								<div class="artist_item-title">Агата<br>фролова</div>
-								<div class="artist_item-text">Авторская музыка</div>
-							</a>
-							<a href="#" class="artist_item">
-								<div class="artist_item-img">
-									<img data-src="images/artists5.jpg" alt="" class="lozad">
-								</div>
-								<div class="artist_item-title">Кристина<br> Мельникова</div>
-								<div class="artist_item-text">Поп</div>
-							</a>
-							<a href="#" class="artist_item">
-								<div class="artist_item-img">
-									<img data-src="images/artists6.jpg" alt="" class="lozad">
-								</div>
-								<div class="artist_item-title">Антон<br> Фадеев</div>
-								<div class="artist_item-text">Хип-Хоп</div>
-							</a>	
-							<a href="#" class="artist_item">
-								<div class="artist_item-img">
-									<img data-src="images/artists1.jpg" alt="" class="lozad">
-								</div>
-								<div class="artist_item-title">Валерия<br>	Иванова</div>
-								<div class="artist_item-text">Фолк-рок</div>
-							</a>
-							<a href="#" class="artist_item">
-								<div class="artist_item-img">
-									<img data-src="images/artists2.jpg" alt="" class="lozad">
-								</div>
-								<div class="artist_item-title">Иван<br> Петров</div>
-								<div class="artist_item-text">Классика</div>
-							</a>
-							<a href="#" class="artist_item">
-								<div class="artist_item-img">
-									<img data-src="images/artists3.jpg" alt="" class="lozad"> 
-								</div>
-								<div class="artist_item-title">Александра<br> смирнова</div>
-								<div class="artists_item-text">Хип-Хоп</div>
-							</a>
-							<a href="#" class="artist_item">
-								<div class="artist_item-img">
-									<img data-src="images/artists4.jpg" alt="" class="lozad">
-								</div>
-								<div class="artist_item-title">Агата<br>фролова</div>
-								<div class="artist_item-text">Авторская музыка</div>
-							</a>
-							<a href="#" class="artist_item">
-								<div class="artist_item-img">
-									<img data-src="images/artists5.jpg" alt="" class="lozad">
-								</div>
-								<div class="artist_item-title">Кристина<br> Мельникова</div>
-								<div class="artist_item-text">Поп</div>
-							</a>
-							<a href="#" class="artist_item">
-								<div class="artist_item-img">
-									<img data-src="images/artists6.jpg" alt="" class="lozad">
-								</div>
-								<div class="artist_item-title">Антон<br> Фадеев</div>
-								<div class="artist_item-text">Хип-Хоп</div>
-							</a>	
-							<a href="#" class="artist_item">
-								<div class="artist_item-img">
-									<img data-src="images/artists1.jpg" alt="" class="lozad">
-								</div>
-								<div class="artist_item-title">Валерия<br>	Иванова</div>
-								<div class="artist_item-text">Фолк-рок</div>
-							</a>
-							<a href="#" class="artist_item">
-								<div class="artist_item-img">
-									<img data-src="images/artists2.jpg" alt="" class="lozad">
-								</div>
-								<div class="artist_item-title">Иван<br> Петров</div>
-								<div class="artist_item-text">Классика</div>
-							</a>
-							<a href="#" class="artist_item">
-								<div class="artist_item-img">
-									<img data-src="images/artists3.jpg" alt="" class="lozad"> 
-								</div>
-								<div class="artist_item-title">Александра<br> смирнова</div>
-								<div class="artists_item-text">Хип-Хоп</div>
-							</a>
-							<a href="#" class="artist_item">
-								<div class="artist_item-img">
-									<img data-src="images/artists4.jpg" alt="" class="lozad">
-								</div>
-								<div class="artist_item-title">Агата<br>фролова</div>
-								<div class="artist_item-text">Авторская музыка</div>
-							</a>
-							<a href="#" class="artist_item">
-								<div class="artist_item-img">
-									<img data-src="images/artists5.jpg" alt="" class="lozad">
-								</div>
-								<div class="artist_item-title">Кристина<br> Мельникова</div>
-								<div class="artist_item-text">Поп</div>
-							</a>
-							<a href="#" class="artist_item">
-								<div class="artist_item-img">
-									<img data-src="images/artists6.jpg" alt="" class="lozad">
-								</div>
-								<div class="artist_item-title">Антон<br> Фадеев</div>
-								<div class="artist_item-text">Хип-Хоп</div>
-							</a>													
+							<div class="releases_title title">Заголовок Новости</div>
+							<div class="news_date">00/00/0000</div>
+							<div class="releases_subtitle">Подзаголовок</div>
+							<div class="news_item-description">Новость текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст </div>
+						</div>	
+						
+						<div class="post_item">
+							<div class="post_item-img">
+								<img data-src="images/post1.jpg" alt="" class="lozad">
+							</div>
+							<div class="post_item-text">
+								<p>Новость текст текст текст</p>
+							</div>
 						</div>
-						<div class="pagination">
-							<a href="#" class="prev"><img src="images/arrow-prev.svg" alt=""></a>
-							<a href="#">1</a>
-							<a href="#">2</a>
-							<a href="#">3</a>
-							<a class="active">4</a>
-							<a href="#">5</a>
-							<span>...</span>	
-							<a href="#">10</a>						
-							<a href="#" class="next"><img src="images/arrow-next.svg" alt=""></a>
-						</div>
-
 					</div>
 				</section>
+
+
+				<div class="news-slider">
+					<div class="cont">
+						<div class="releases_bottom">							
+							<div class="releases_left">
+								<div class="releases_subtitle">другие новости</div>
+							</div>
+							<div class="slider-arrows5"></div>
+						</div>
+						<div class="news-slider_items">
+							<div class="news-slider_item">
+								<div class="news-slider_item-title">Заголовок</div>
+								<div class="news-slider_item-img">
+									<img src="images/news1.jpg" alt="">
+								</div>	
+							</div>
+							<div class="news-slider_item">
+								<div class="news-slider_item-title">Заголовок</div>
+								<div class="news-slider_item-img">
+									<img src="images/news2.jpg" alt="">
+								</div>	
+							</div>
+							<div class="news-slider_item">
+								<div class="news-slider_item-title">Заголовок</div>
+								<div class="news-slider_item-img">
+									<img src="images/news3.jpg" alt="">
+								</div>	
+							</div>
+							<div class="news-slider_item">
+								<div class="news-slider_item-title">Заголовок</div>
+								<div class="news-slider_item-img">
+									<img src="images/news4.jpg" alt="">
+								</div>	
+							</div>
+							<div class="news-slider_item">
+								<div class="news-slider_item-title">Заголовок</div>
+								<div class="news-slider_item-img">
+									<img src="images/news3.jpg" alt="">
+								</div>	
+							</div>
+							<div class="news-slider_item">
+								<div class="news-slider_item-title">Заголовок</div>
+								<div class="news-slider_item-img">
+									<img src="images/news2.jpg" alt="">
+								</div>	
+							</div>							
+						</div>
+					</div>
+				</div>
 
 
 			</div>
