--- a/service.html
+++ b/service.html
@@ -52,36 +52,36 @@
 							<img src="images/ic_close2.svg" alt="">
 						</button>
 
-						<a href="#" class="logo">
+						<a href="index.html" class="logo">
 							<img src="images/logo.svg" alt="">
 						</a>
 
 						<nav class="menu row">
 
-							<a href="#" class="logo logo-mob">
+							<a href="index.html" class="logo logo-mob">
 								<img src="images/logo.svg" alt="">
 							</a>
 														
 							<div class="item">
-								<a href="#">Главная</a>
+								<a href="index.html">Главная</a>
 							</div>
 							<div class="item">
-								<a href="#">О нас</a>
+								<a href="about.html">О нас</a>
 							</div>
 							<div class="item">
-								<a href="#">Релизы</a>
+								<a href="releases.html">Релизы</a>
 							</div>
 							<div class="item">
-								<a href="#">Артисты</a>
+								<a href="artists.html">Артисты</a>
 							</div>
 							<div class="item">
-								<a href="#">Услуги</a>
+								<a href="service.html">Услуги</a>
 							</div>
 							<div class="item">
-								<a href="#">Новости</a>
+								<a href="news.html">Новости</a>
 							</div>
 							<div class="item">
-								<a href="#">Контакты</a>
+								<a href="contacts.html">Контакты</a>
 							</div>
 							<div class="header_social header_social-mob">
 								<a href="#">
@@ -149,7 +149,7 @@
 									<div class="service_item-title">Маркетинг<br> и SMM</div>
 									<div class="service_item-text">Мы выстраиваем ваш личный бренд, образ в головах слушателей, делаем все активности, которые к этому приводят: ведение групп в социальных сетях, продвижение треков и клипов и в дальнейшем - концертов.</div>
 								</div>
-								<a href="#" class="service_item-btn">
+								<a href="#" class="service_item-btn modal_link" data-content="#callback_modal2">
 									<span>Заказать</span>
 								</a>
 							</div>
@@ -158,7 +158,7 @@
 									<div class="service_item-title">PR</div>
 									<div class="service_item-text">Всё, что связано с<br> работой со СМИ:<br> поставить клип<br> на музыкальные каналы,<br> договориться об<br> интервью<br> в журнале, поставить трек<br> на радио, договориться о<br> выступлении артиста<br> на мероприятии.</div>
 								</div>
-								<a href="#" class="service_item-btn">
+								<a href="#" class="service_item-btn modal_link" data-content="#callback_modal2">
 									<span>Заказать</span>
 								</a>
 							</div>
@@ -167,7 +167,7 @@
 									<div class="service_item-title">Дистрибуция</div>
 									<div class="service_item-text">Размещение треков<br> на цифровых витринах<br> (Apple Music, iTunes, VK<br> Музыка, Яндекс Музыка).<br> Производство контента<br> на физических носителях<br> (сейчас это больше мерч).</div>
 								</div>
-								<a href="#" class="service_item-btn">
+								<a href="#" class="service_item-btn modal_link" data-content="#callback_modal2">
 									<span>Заказать</span>
 								</a>
 							</div>
@@ -176,7 +176,7 @@
 									<div class="service_item-title">Решение<br> юридических и<br> бухгалтерских<br> вопросов</div>
 									<div class="service_item-text">Всё, что связано с<br> работой со СМИ:<br> поставить клип<br> на музыкальные каналы,<br> договориться об<br> интервью<br> в журнале, поставить трек<br> на радио, договориться о<br> выступлении артиста<br> на мероприятии.</div>
 								</div>
-								<a href="#" class="service_item-btn">
+								<a href="#" class="service_item-btn modal_link" data-content="#callback_modal2">
 									<span>Заказать</span>
 								</a>
 							</div>
@@ -185,7 +185,7 @@
 									<div class="service_item-title">Сбор<br> вознаграждений<br> за публичное<br> исполнение</div>
 									<div class="service_item-text">Агрегаторы не занимаются<br> сбором вознаграждений<br> за публичное исполнение.<br> Лейблы же имеют<br> контракты с РАО, ВОиС,<br> РСП.</div>
 								</div>
-								<a href="#" class="service_item-btn">
+								<a href="#" class="service_item-btn modal_link" data-content="#callback_modal2">
 									<span>Заказать</span>
 								</a>
 							</div>
@@ -194,7 +194,7 @@
 									<div class="service_item-title">Синхронизация</div>
 									<div class="service_item-text">Лейбл предоставит ваши<br> песни в рамках своего<br> каталога на телешоу, в<br> кинокомпании, караоке<br>-системы. Лицензирование<br> музыки в кино, сериалы и<br> другие творческие<br> интеграции. Музыка для<br> пассажирского транспорта.</div>
 								</div>
-								<a href="#" class="service_item-btn">
+								<a href="#" class="service_item-btn modal_link" data-content="#callback_modal2">
 									<span>Заказать</span>
 								</a>
 							</div>
@@ -203,7 +203,7 @@
 									<div class="service_item-title">Промо<br> на витринах</div>
 									<div class="service_item-text">Лейбл отправляет запросы<br> на промо в большинство<br> магазинов напрямую, не<br> отсекая треки, или<br> контролируя процесс,<br> чтобы все артисты были<br> довольны.</div>
 								</div>
-								<a href="#" class="service_item-btn">
+								<a href="#" class="service_item-btn modal_link" data-content="#callback_modal2">
 									<span>Заказать</span>
 								</a>
 							</div>
@@ -324,6 +324,36 @@
 				</a>
 				<a href="#">Другие</a>
 			</div>
+		</section>
+
+
+		<section class="service-callback" id="callback_modal2">
+			<div class="service-callback_title">форма обратной связи</div>			
+			<form class="service-callback_form">				
+				<div class="line">
+					<div class="field">
+						<label for="name">Имя</label>
+						<input id="name" type="text" placeholder="Введите имя...">
+					</div>
+				</div>	
+				<div class="line">
+					<div class="field">
+						<label for="phone">Телефон</label>
+						<input id="phone" type="tel" placeholder="Введите номер телефона...">
+					</div>
+				</div>					
+				<div class="line">	
+					<div class="field">
+						<label for="message">Сообщение</label>
+						<textarea id="message" placeholder="Введите текст сообщения..."></textarea>		
+					</div>						
+				</div>				
+			
+				<button type="submit" class="btn">
+					<span>Отправить</span>
+				</button>                                  
+				
+			</form>
 		</section>
 
 
