--- a/contacts.html
+++ b/contacts.html
@@ -52,36 +52,36 @@
 							<img src="images/ic_close2.svg" alt="">
 						</button>
 
-						<a href="#" class="logo">
+						<a href="index.html" class="logo">
 							<img src="images/logo.svg" alt="">
 						</a>
 
 						<nav class="menu row">
 
-							<a href="#" class="logo logo-mob">
+							<a href="index.html" class="logo logo-mob">
 								<img src="images/logo.svg" alt="">
 							</a>
 														
 							<div class="item">
-								<a href="#">Главная</a>
+								<a href="index.html">Главная</a>
 							</div>
 							<div class="item">
-								<a href="#">О нас</a>
+								<a href="about.html">О нас</a>
 							</div>
 							<div class="item">
-								<a href="#">Релизы</a>
+								<a href="releases.html">Релизы</a>
 							</div>
 							<div class="item">
-								<a href="#">Артисты</a>
+								<a href="artists.html">Артисты</a>
 							</div>
 							<div class="item">
-								<a href="#">Услуги</a>
+								<a href="service.html">Услуги</a>
 							</div>
 							<div class="item">
-								<a href="#">Новости</a>
+								<a href="news.html">Новости</a>
 							</div>
 							<div class="item">
-								<a href="#">Контакты</a>
+								<a href="contacts.html">Контакты</a>
 							</div>
 							<div class="header_social header_social-mob">
 								<a href="#">
